// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test User component Snapshot testing should match snapshot with userCard 1`] = `
Array [
  <div
    className="userCard"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      id="488edda9-f042-434f-8162-e4dddf7055f5"
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "fontSize": "1.4rem",
          "height": "100%",
          "justifyContent": "space-around",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <div
        className="userCard__header"
      >
        <div
          className="userCard__header_img"
        >
          <img
            alt="Mrs Emily Mortensen"
            src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
          />
        </div>
        <div
          className="userCard__header_details"
        >
          <div>
            <span
              className="userCard__title"
            >
              Mrs Emily Mortensen 31
            </span>
          </div>
          <div
            className="bold"
          >
            <span>
              blackwolf380
            </span>
          </div>
          <div>
            <span>
              emily.mortensen@example.com
            </span>
          </div>
          <div>
            <span>
              94033936
            </span>
          </div>
          <div>
            <span>
              92381351
            </span>
          </div>
        </div>
      </div>
      <div
        className="userCard__more"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "fontWeight": "bold",
            }
          }
          type="button"
        >
          Load more
        </button>
      </div>
    </div>
  </div>,
  <div
    className="userCard"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      id="bdc71f4e-e874-4575-96b5-5cfc6959458e"
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "fontSize": "1.4rem",
          "height": "100%",
          "justifyContent": "space-around",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <div
        className="userCard__header"
      >
        <div
          className="userCard__header_img"
        >
          <img
            alt="Miss Nurdan Tazegül"
            src="https://randomuser.me/api/portraits/thumb/women/9.jpg"
          />
        </div>
        <div
          className="userCard__header_details"
        >
          <div>
            <span
              className="userCard__title"
            >
              Miss Nurdan Tazegül 31
            </span>
          </div>
          <div
            className="bold"
          >
            <span>
              bigdog994
            </span>
          </div>
          <div>
            <span>
              nurdan.tazegul@example.com
            </span>
          </div>
          <div>
            <span>
              (012)-335-1433
            </span>
          </div>
          <div>
            <span>
              (010)-927-6700
            </span>
          </div>
        </div>
      </div>
      <div
        className="userCard__more"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "fontWeight": "bold",
            }
          }
          type="button"
        >
          Load more
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`test User component Snapshot testing should match snapshot with userList 1`] = `
Array [
  <div
    className="userList"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      id="488edda9-f042-434f-8162-e4dddf7055f5"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <img
        alt="Mrs Emily Mortensen"
        src="https://randomuser.me/api/portraits/thumb/women/78.jpg"
      />
      <span
        className="userList__title"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Mrs
      </span>
      <span
        className="userList__first"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Emily
      </span>
      <span
        className="userList__last"
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "auto",
          }
        }
      >
        Mortensen
      </span>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
    </div>
  </div>,
  <div
    className="userList"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      id="bdc71f4e-e874-4575-96b5-5cfc6959458e"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <img
        alt="Miss Nurdan Tazegül"
        src="https://randomuser.me/api/portraits/thumb/women/9.jpg"
      />
      <span
        className="userList__title"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Miss
      </span>
      <span
        className="userList__first"
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        Nurdan
      </span>
      <span
        className="userList__last"
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "auto",
          }
        }
      >
        Tazegül
      </span>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
    </div>
  </div>,
]
`;
